--- a/az/selfasserted-appfactor-registration.html
+++ b/az/selfasserted-appfactor-registration.html
@@ -634,7 +634,7 @@
                                 <p style="font-weight: bold; margin-top: 20px;">2. Scan this barcode</p>
                                 <img id="strongAuthenticationAppQRCodeBitmapImage" src="">
 
-                                <div id="api">https://stg-slepw-identity.selise.biz/Otp/Generate</div>
+                                <div id="api"></div>
 
                                 <br />
                             </div>
