--- a/az/selfasserted-appfactor-verifyCode.html
+++ b/az/selfasserted-appfactor-verifyCode.html
@@ -853,6 +853,10 @@
 
                             <br />
                         </div>
+
+                        <div>
+                            <a href="" id="reset_auth_app">Reset Auth app</a>
+                        </div>
                     </div>
                 </td>
             </tr>
@@ -863,6 +867,11 @@
     <script>
         $(function () {
             $('#attributeList ul li:nth-child(2)').remove();
+
+            var $reset_auth_app = $('#reset_auth_app');
+            var $strongResetAuthAppToken = $('#strongResetAuthAppToken');
+            console.log('reset link', $strongResetAuthAppToken.val());
+            $reset_auth_app.attr('href', 'https://stg-slepw-identity.selise.biz/Otp/SendQRCodeReRegistrationEmail?resetAuthAppToken=' + $strongResetAuthAppToken.val());
         });
     </script>
 </body>
