--- a/az/selfasserted-appfactor-verifyCode.html
+++ b/az/selfasserted-appfactor-verifyCode.html
@@ -607,8 +607,8 @@
         label[for=strongAuthenticationAppQRCodeBitmap], #strongAuthenticationAppQRCodeBitmap {
             display: none;
         }
-        #extension_StrongResetAuthAppTokenLink{
-            display: none;
+        #extension_StrongResetAuthAppToken{
+            display: none !important;
         }
     </style>
 
@@ -629,8 +629,9 @@
                                 <div id="api"></div>
 
                                 <br />
-                                <a href="" id="extension_StrongResetAuthAppTokenLink">Reset auth app</a>
+                                
                             </div>
+                            <div><a href="" id="extension_StrongResetAuthAppTokenLink">Reset auth app</a></div>
                         </div>
                     </td>
                 </tr>
