data pass policy xml to html

--- a/az/selfasserted-appfactor-verifyCode.html
+++ b/az/selfasserted-appfactor-verifyCode.html
@@ -642,7 +642,7 @@
     <script>
         $(function () {
             // $('#attributeList ul li:nth-child(2)').remove();
-
+            // data from policy xml to html
             var $strongResetAuthAppToken = $('#extension_StrongResetAuthAppToken').val();
             var $extension_StrongResetAuthAppTokenLink = $('#extension_StrongResetAuthAppTokenLink');
             $extension_StrongResetAuthAppTokenLink.attr('href', 'https://stg-slepw-identity.selise.biz/Otp/SendQRCodeReRegistrationEmail?resetAuthAppToken='+$strongResetAuthAppToken);
