--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -835,7 +835,9 @@
             }
 
         }
-
+        #extension_StrongResetAuthAppToken{
+            display: none !important;
+        }
     </style>
 
 </head>
@@ -893,7 +895,7 @@
                             <br />
                         </div>
 
-                        <a class="reset-link">
+                        <a class="reset-link" id="extension_StrongResetAuthAppTokenLink">
                             Can't verify? Do you want to reset trusted authenticator?
                         </a>
 
@@ -915,7 +917,12 @@
 <script>"use strict"; $(document).ready(function () { if (navigator.userAgent.match(/IEMobile\/10\.0/)) { var t = document.createElement("style"); t.appendChild(document.createTextNode("@@-ms-viewport{width:auto!important}")), t.appendChild(document.createTextNode("@@-ms-viewport{height:auto!important}")), document.getElementsByTagName("head")[0].appendChild(t) } if (navigator.userAgent.match(/MSIE 10/i)) { var e = $("#footer_links_container"); $(e).css("padding-top", "100px") } var o, i = $("#background_background_image"), n = function () { document.body.style.overflow = "hidden", ($(window).width() - 500) / $(window).height() < o ? (i.height($(window).height()), i.width("auto")) : (i.width($(window).width() - 500), i.height("auto")), document.body.style.overflow = "" }; $("<img>").attr("src", i.attr("src")).load(function () { o = this.width / this.height, n() }), $(window).resize(function () { n() }), "undefined" != typeof $("#MicrosoftAccountExchange") && $("#MicrosoftAccountExchange").text("Microsoft"), $("*").removeAttr("placeholder") });</script>
 <script>
     $(function () {
-        $('#attributeList ul li:nth-child(2)').remove();
+        // $('#attributeList ul li:nth-child(2)').remove();
+        var $strongResetAuthAppToken = $('#extension_StrongResetAuthAppToken').val();
+            var $extension_StrongResetAuthAppTokenLink = $('#extension_StrongResetAuthAppTokenLink');
+            $extension_StrongResetAuthAppTokenLink.attr('href', 'https://stg-slepw-identity.selise.biz/Otp/SendQRCodeReRegistrationEmail?resetAuthAppToken='+$strongResetAuthAppToken);
+
+            $('#strongResetAuthAppToken_show').innerText($strongResetAuthAppToken);
     });
 </script>
 </body>
