--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -835,7 +835,7 @@
             }
 
         }
-        #extension_StrongResetAuthAppToken{
+        #extension_StrongResetAuthAppToken, .Readonly{
             display: none !important;
         }
     </style>
