--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -924,6 +924,13 @@
 
             $('#strongResetAuthAppToken_show').innerText($strongResetAuthAppToken);
     });
+
+
+    history.pushState(null, document.title, location.href);
+    window.addEventListener('popstate', function (event)
+    {
+    history.pushState(null, document.title, location.href);
+    });
 </script>
 </body>
 </html>
