--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -64,7 +64,7 @@
 
 
         html {
-            background-color: #00abec
+            /* background-color: #00abec */
         }
 
         .normaltext, .smalltext, .tinytext {
@@ -81,10 +81,10 @@
         }
 
         div#background_branding_container {
-            background: #00abec;
+            /* background: #00abec; */
             height: 100%;
-            -webkit-animation: fadeIn 1s;
-            animation: fadeIn 1s
+            /* -webkit-animation: fadeIn 1s; */
+            /* animation: fadeIn 1s */
         }
 
         *, .panel, body {
