--- a/az-test/selfasserted-appfactor-registration.html
+++ b/az-test/selfasserted-appfactor-registration.html
@@ -11,30 +11,30 @@
         @font-face {
             font-family: "ITC Legacy Serif";
             src: url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.eot?");
-            src: url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.eot?") format("embedded-opentype"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.ttf?") format("truetype"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.woff?") format("woff"), url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.svg?") format("svg");
+            src: url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.eot?") format("embedded-opentype"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.ttf?") format("truetype"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.woff?") format("woff"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-webfont.svg?") format("svg");
             font-weight: normal;
             font-style: normal;
         }
 
         @font-face {
             font-family: "ITC Legacy Serif Bold";
-            src: url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.eot?");
-            src: url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.eot?") format("embedded-opentype"), url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.ttf?") format("truetype"), url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.woff?") format("woff"), url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.svg?") format("svg");
+            src: url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.eot?");
+            src: url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.eot?") format("embedded-opentype"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.ttf?") format("truetype"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.woff?") format("woff"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-bold-webfont.svg?") format("svg");
             font-weight: bold;
         }
 
         @font-face {
             font-family: "ITC Legacy Serif Italic";
-            src: url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.eot?");
-            src: url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.eot?") format("embedded-opentype"), url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.ttf?") format("truetype"), url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.woff?") format("woff"), url("http://pwc.fakedomain.com/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.svg?") format("svg");
+            src: url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.eot?");
+            src: url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.eot?") format("embedded-opentype"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.ttf?") format("truetype"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.woff?") format("woff"), url("https://cdn.selise.biz/slpc/itclegacyserif-lt-book-font/itc-legacy-serif-lt-book-italic-webfont.svg?") format("svg");
             font-weight: normal;
             font-style: italic;
         }
 
         @font-face {
             font-family: 'CalibriLight';
-            src: url('http://pwc.fakedomain.com/calibri/calibri-light.eot?');
-            src: local('Calibri Light'), url('http://pwc.fakedomain.com/calibri/calibri-light.eot?') format('embedded-opentype'), url('http://pwc.fakedomain.com/calibri/calibri-light.ttf?') format('truetype'), url('http://pwc.fakedomain.com/calibri/calibri-light.woff?') format('woff'), url('http://pwc.fakedomain.com/calibri/calibri-light.svg?') format('svg');
+            src: url('https://cdn.selise.biz/slpc/calibri/calibri-light.eot?');
+            src: local('Calibri Light'), url('https://cdn.selise.biz/slpc/calibri/calibri-light.eot?') format('embedded-opentype'), url('https://cdn.selise.biz/slpc/calibri/calibri-light.ttf?') format('truetype'), url('https://cdn.selise.biz/slpc/calibri/calibri-light.woff?') format('woff'), url('https://cdn.selise.biz/slpc/calibri/calibri-light.svg?') format('svg');
             font-weight: normal;
             font-style: normal;
             font-display: block;
@@ -42,8 +42,8 @@
 
         @font-face {
             font-family: 'CalibriBold';
-            src: url('http://pwc.fakedomain.com/calibri/Calibri-bold.eot?');
-            src: local('Calibri Bold'), url('http://pwc.fakedomain.com/calibri/Calibri-bold.eot?') format('embedded-opentype'), url('http://pwc.fakedomain.com/calibri/Calibri-Bold.ttf?') format('truetype'), url('http://pwc.fakedomain.com/calibri/Calibri-Bold.woff?') format('woff'), url('http://pwc.fakedomain.com/calibri/Calibri-Bold.svg?') format('svg');
+            src: url('https://cdn.selise.biz/slpc/calibri/Calibri-bold.eot?');
+            src: local('Calibri Bold'), url('https://cdn.selise.biz/slpc/calibri/Calibri-bold.eot?') format('embedded-opentype'), url('https://cdn.selise.biz/slpc/calibri/Calibri-Bold.ttf?') format('truetype'), url('https://cdn.selise.biz/slpc/calibri/Calibri-Bold.woff?') format('woff'), url('https://cdn.selise.biz/slpc/calibri/Calibri-Bold.svg?') format('svg');
             font-weight: normal;
             font-style: normal;
             font-display: block;
@@ -790,9 +790,8 @@
         });
 
         history.pushState(null, document.title, location.href);
-        window.addEventListener('popstate', function (event)
-        {
-        history.pushState(null, document.title, location.href);
+        window.addEventListener('popstate', function (event) {
+            history.pushState(null, document.title, location.href);
         });
     </script>
 
