--- a/az-test/selfasserted-appfactor-registration.html
+++ b/az-test/selfasserted-appfactor-registration.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ePrivateWealth</title>
+    <link rel="icon" type="image/x-icon" href="~/icons/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="~/icons/favicon.ico">
 
     <style>
         @font-face {
