--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -2,9 +2,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-
-    <title>Verification Page</title>
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="locale" content="en-US">
@@ -12,6 +9,9 @@
     <meta name="GOOGLEBOT" content="NOARCHIVE">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+    <title>ePrivateWealth</title>
+    <link rel="icon" type="image/x-icon" href="~/icons/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="~/icons/favicon.ico">
     <style id="common">
         @charset "utf-8";
 
