--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -10,8 +10,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <title>ePrivateWealth</title>
-    <link rel="icon" type="image/x-icon" href="~/icons/favicon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="~/icons/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://cdn.selise.biz/slpc/slpc-icon/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn.selise.biz/slpc/slpc-icon/favicon.ico">
     <style id="common">
         @charset "utf-8";
 
