--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -632,7 +632,7 @@
             background-size:cover ;
             background-position: right;
             /*background-position: -100px bottom ;*/
-            background-image: url("https://stg-slepw-identity.selise.biz/assets/NEW-BG.jpg");
+            background-image: url("https://stg-az-pwc-identity.selise.biz/assets/NEW-BG.jpg");
             /* background-image: url("./BG-EPW1.png"); */
         }
 
@@ -1024,7 +1024,7 @@
         // $('#attributeList ul li:nth-child(2)').remove();
         var $strongResetAuthAppToken = $('#extension_StrongResetAuthAppToken').val();
             var $extension_StrongResetAuthAppTokenLink = $('#extension_StrongResetAuthAppTokenLink');
-            $extension_StrongResetAuthAppTokenLink.attr('href', 'https://stg-slepw-identity.selise.biz/Otp/SendQRCodeReRegistrationEmail?resetAuthAppToken='+$strongResetAuthAppToken);
+            $extension_StrongResetAuthAppTokenLink.attr('href', 'https://stg-az-pwc-identity.selise.biz/Otp/SendQRCodeReRegistrationEmail?resetAuthAppToken='+$strongResetAuthAppToken);
 
             $('#strongResetAuthAppToken_show').innerText($strongResetAuthAppToken);
     });
