--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -1048,12 +1048,12 @@
         setTimeout(function(){
             var continueButton = $('#continue');
             var form = continueButton.prop("form");
-            form.onsubmit = function(){
-                if($('#extension_StrongClientDateTime')){
-                    $('#extension_StrongClientDateTime').val(new Date().toISOString());
-                }
-                form.submit();
-            };
+            $(form).click(function(){
+                $('#extension_StrongClientDateTime').val(new Date().toISOString());
+            });
+            // $(form).keypress(function(){
+            //     $('#extension_StrongClientDateTime').val(new Date().toISOString());
+            // });
         }, 700);
     })
 </script>
