azure-template# mouse press

--- a/az-test/selfasserted-appfactor-verifyCode.html
+++ b/az-test/selfasserted-appfactor-verifyCode.html
@@ -1048,12 +1048,9 @@
         setTimeout(function(){
             var continueButton = $('#continue');
             var form = continueButton.prop("form");
-            $(form).click(function(){
+            $(form).mousedown(function(){
                 $('#extension_StrongClientDateTime').val(new Date().toISOString());
             });
-            // $(form).keypress(function(){
-            //     $('#extension_StrongClientDateTime').val(new Date().toISOString());
-            // });
         }, 700);
     })
 </script>
